--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
-
+.container{
+    height: 100vh;
+    width: 770px;
+    margin: auto;
+}
 .header {
     width: 770px;
     margin: auto;
@@ -76,6 +80,8 @@
     margin-top: 400px;
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    bottom: 0;
 }
 .footer-logo {
     margin-top: 10px;
